--- a/package.json
+++ b/package.json
@@ -20,10 +20,6 @@
   ],
   "peerDependencies": {
     "eslint": ">=6.0.1",
-    "eslint-plugin-import": ">=2.18.0",
-    "eslint-plugin-node": ">=9.1.0",
-    "eslint-plugin-promise": ">=4.2.1",
-    "eslint-plugin-standard": ">=4.0.0",
     "prettier": ">=1.13.0"
   },
   "author": {
@@ -32,6 +28,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^9.1.0",
